tests/ui/no_repr_usize.rs
use enum_select::EnumSelect;

#[derive(EnumSelect)]
pub enum Something {
    Abc,
    Xyz,
}

fn main() {}
